2007-12-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Modify some tests for absolute trees containing whitespace.
	* tests/missing.test: Use "./missing" instead of "`pwd`/missing".
	* tests/missing2.test: Likewise.
	* tests/mmodely.test: Add `pwd` to $PATH instead of absolute
	references to myyacc.sh and mylex.sh.
	* tests/multlib.test: Likewise for mycc.
	* tests/txinfo26.test: Skip if `pwd` contains whitespace, as
	an absolute --srcdir does not work there.

	* INSTALL, lib/INSTALL, lib/config-ml.in, lib/config.guess,
	lib/config.sub, lib/texinfo.tex: Sync from upstream.

	Fix the distdir target to cope with spaces in absolute file names.
	* lib/am/distdir.am: Quote all instances of $(distdir) and
	$(top_distdir).  They could contain white space, coming from
	a toplevel package bootstrapped with an older Automake version.
	(am__relativize): New macro, taken from gnulib code, written by
	Bruno Haible.
	(distdir): Use it to compute relative paths to distdir and
	top_distdir for enclosed subpackages.
	Also, quote $(distuninstallcheck_dir).
	* lib/am/texinfos.am: Likewise, quote $(distdir).

2007-11-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Quote file names in tests that can be absolute.
	* tests/auxdir.test, tests/check3.test, tests/check4.test,
	tests/compile.test, tests/cond33.test, tests/condhook.test,
	tests/distdir.test, tests/dollar.test, tests/empty.test,
	tests/gnits2.test, tests/gnits3.test, tests/include2.test,
	tests/insthook.test, tests/java.test, tests/libtool7.test,
	tests/lisp4.test, tests/lisp5.test, tests/lisp6.test,
	tests/ltcond.test, tests/ltconv.test, tests/mkinst2.test,
	tests/multlib.test, tests/nobase.test, tests/nodist2.test,
	tests/obsolete.test, tests/pr287.test, tests/pr300-lib.test,
	tests/pr300-ltlib.test, tests/pr300-prog.test, tests/python10.test,
	tests/python3.test, tests/strip.test, tests/transform.test,
	tests/txinfo13.test, tests/txinfo19.test, tests/txinfo22.test,