@@ -1,5 +1,8 @@
 2007-12-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/defs.in: Quote $srcdir, $PATH; skip libtool and gettext
+	tests if the absolute source or build tree name contain whitespace.
+
 	Modify some tests for absolute trees containing whitespace.
 	* tests/missing.test: Use "./missing" instead of "`pwd`/missing".
 	* tests/missing2.test: Likewise.
